Perkin-UAT/force-app/main/default/objects/Form_Qualification_History__c/Form_Qualification_History__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the primary and secondary history as well as product interest associated with each form completed by a prospect and associated with a lead.</description>
    <label>Form Qualification History</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>FQH #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms Qualification History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>