Perkin-UAT/force-app/main/default/objects/Form_Qualification_History__c/fields/Completion_Action_Product__c.field-meta.xml
<CustomField>
    <fullName>Completion_Action_Product__c</fullName>
    <description>This field captures the completion action product associated to the form corresponding to qualification and interest values.</description>
    <inlineHelpText>This field captures the completion action product associated to the form corresponding to qualification and interest values.</inlineHelpText>
    <label>Single Product Line</label>
    <length>40</length>
    <type>Text</type>
</CustomField>