Perkin-UAT/force-app/main/default/objects/Form_Qualification_History__c/fields/Corresponding_Lead__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field associates the form history data to a specific lead/prospect combination.</description>
    <inlineHelpText>This field associates the form history data to a specific lead/prospect combination.</inlineHelpText>
    <label>Corresponding Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Forms Qualification History</relationshipLabel>
    <relationshipName>Forms_Qualification_History</relationshipName>
    <type>Lookup</type>
</CustomField>