Perkin-UAT/force-app/main/default/objects/Form_Qualification_History__c/fields/Primary_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Primary_Qualification__c</fullName>
    <description>This field captures the value from the associated lead based on form updates sent from Pardot.</description>
    <inlineHelpText>This field captures the value from the associated lead based on form updates sent from Pardot.</inlineHelpText>
    <label>Primary Qualification</label>
    <type>TextArea</type>
</CustomField>