Perkin-UAT/force-app/main/default/objects/Form_Qualification_History__c/fields/Product_Interests__c.field-meta.xml
<CustomField>
    <fullName>Product_Interests__c</fullName>
    <description>This field captures the value from the associated lead based on form updates sent from Pardot.</description>
    <inlineHelpText>This field captures the value from the associated lead based on form updates sent from Pardot.</inlineHelpText>
    <label>Requested Interests</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>